--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,20 @@
         </div>
       </nav>
 
-      <h1 class="text-light">geef een email en je linkdin profiel.</h1>
+      <div class="p-4 d-flex flex-column w-100 align-items-center">
+          <h1 class="text-light p-4">U kunt gerust contact met mij opnemen via de volgende linken:</h1>
+          <div class="">
+          <h2 class="text-light p-4"><img src="PortfolioImg/MailLogoBlue.png" alt="MailLogo" width="80px" height="80px"> mkuipers28@st.noorderpoort.nl</h2>
+          <h2 class="text-light p-4">
+            <a href="https://www.linkedin.com/in/marlies-kuipers-abb565292/">
+              <img src="PortfolioImg/LinkedIn-Icon-Square.png" alt="LinkedInLogo" width="80px" height="80px">
+              : Marlies Kuipers</a></h2>
+          <h2 class="text-light p-4">
+            <a href="https://github.com/Marlies-boop">
+              <img src="PortfolioImg/GithubLogo.png" alt="GithubLogo" width="80px" height="80px">
+              : Marlies-boop</a></h2>
+            </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
