--- a/overmij.html
+++ b/overmij.html
@@ -36,11 +36,10 @@
         </div>
       </nav>
 
-      <div class="container">
+      <div class="container p-4">
         <center>
-        <h1 class="text-light">Zet hier nog wat plaatjes neer ofzo</h1>
         <h1 class="text-light">Over mij</h1>
-        <h2  class="text-light">Hallo, mijn naam is Marlies. 
+        <h3  class="text-light">Hallo, mijn naam is Marlies. 
             Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
             Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
             Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.
@@ -58,7 +57,7 @@
             Toen ging ik van Nintendo DS naar de WII en de Playstation 4. 
             Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet. 
             Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer. 
-          </h2>
+          </h3>
       </div>
     </center>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
