--- a/projecten.html
+++ b/projecten.html
@@ -35,7 +35,7 @@
           </div>
         </div>
       </nav>
-
+      <center>
       <div class="container p-4">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
             <div class="col">
@@ -103,7 +103,7 @@
               <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Squirry</h5>
+                    <h5 class="card-title text-light">Scurry</h5>
                     <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
                       Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
                     </p>
@@ -125,20 +125,20 @@
               </div>
               <div class="col">
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                  <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Unreal Keuzedeel</h5>
                     <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
                       waar je drie knoppen moet vinden om de deur naar het einde te openen.
                       Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
                     </p>
-                    <a href="#" class="btn btn-primary">Download Unreal Keuzedeel</a>
+                    <a href="ProjectBuilds/UnrealKeuzedeel.zip" class="btn btn-primary">Download Unreal Keuzedeel</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          
+        </center> 
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
